--- a/Archive_repo_tool/Archive_repo_tool/Archive_repo_tool.csproj
+++ b/Archive_repo_tool/Archive_repo_tool/Archive_repo_tool.csproj
@@ -81,7 +81,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\osisoftLogo.png" />
+    <None Include="Resources\osisoftLogo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
